<resources>
    <string name="app_name">Cash Your Trash</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_mobile_number">Mobile Number</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_login_short">Login</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_mobile_number">This number is inaccurate</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user_activty">UserActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
